진하게, 기울기 태그 추가
진하게, 기울기 태그 추가

--- a/HTML5 06.html
+++ b/HTML5 06.html
@@ -5,9 +5,22 @@
 <meta charset="utf-8"/>
 
 </head>
-연습은 나중에 합시다.
 <body>
+    <hr>
+    <center><h1>글꼴 진하게 </h1></center>
+    <center><b> b 태그 사용합니다.</b></center>
+    <p></p>
+    <center><strong> strong 태그 사용합니다.</strong></center>
+    <p>   
+    </p>
+    <hr>
+    <center><h1>기울임 효과</h1></center>
+    <p></p>
 
+    <center><i> i 태그 사용합니다.</i></center>
+    <p></p>
+    <center><em> em 태그 사용합니다.</em></center>
+    <hr>
 </body>
 
 </html>
