--- a/HTML5 06.html
+++ b/HTML5 06.html
@@ -21,6 +21,10 @@
     <p></p>
     <center><em> em 태그 사용합니다.</em></center>
     <hr>
+    <center><smal> smal 태그 사용합니다</smal></center>
+
+    <div style="background-color:cyan">구역1</div>
+    <div style="width:100px; height:100px; background-color:#CF0">구역2</div>
 </body>
 
 </html>
