--- a/HTML5 07.html
+++ b/HTML5 07.html
@@ -18,6 +18,12 @@
     </p>
     <a href="http://www.kakao.com"> 카카오 </a>
 
+
+    <ruby>  <!-- 일본어 후리가나처럼 한자 위에 글자를 넣을 수 있는 태그-->
+        <span> 大韓民國 </span>  
+        <rt> 대한민국 </rt> <!-- -->
+    </ruby>
+
 </body>
 
 </html>>
