테이블 연습 추가

--- a/HTML5 07.html
+++ b/HTML5 07.html
@@ -24,6 +24,23 @@
         <rt> 대한민국 </rt> <!-- -->
     </ruby>
 
+    <ul>
+    <li> facebook </li>
+    <li> google </li>
+    <li> twitter </li>
+    <li> naver </li>
+    <li> kakao </li>
+    </ul>
+<hr>
+    <ol>
+        <li> facebook </li>
+        <li> google </li>
+        <li> twitter </li>
+        <li> naver </li>
+        <li> kakao </li>
+    
+    </ol>
+
 </body>
 
 </html>>
