--- a/html5 10.html
+++ b/html5 10.html
@@ -11,8 +11,16 @@
             <input type="submit"><br>
             <input type="text" name="name"> id<br>
             <input type=:"password" name="password"> password<br>
-            <input type="submit">
+            <input type="submit"><br>
 
+
+            버튼 <input type="button"><br>
+            체크박스 <input type="checkbox"><br>
+            파일 <input type="file"><br>
+            히든 <input type="hidden"><br>
+            라디오 <input type="radio"><br>
+            리셋 <input type="reset"><br>
+            텍스트 <input type="text"><br>
 
 
 
