--- a/HTML5 07.html
+++ b/HTML5 07.html
@@ -24,7 +24,7 @@
         <rt> 대한민국 </rt> <!-- -->
     </ruby>
 
-    <ul>
+    <ul> <!-- 순서가 없는 목록 태그 -->
     <li> facebook </li>
     <li> google </li>
     <li> twitter </li>
@@ -32,13 +32,12 @@
     <li> kakao </li>
     </ul>
 <hr>
-    <ol>
+    <ol> <!-- 순서가 있는 목록 태그 -->
         <li> facebook </li>
         <li> google </li>
         <li> twitter </li>
         <li> naver </li>
         <li> kakao </li>
-    
     </ol>
 
 </body>
