--- a/html5 10.html
+++ b/html5 10.html
@@ -25,6 +25,15 @@
 
 
         </form>
+
+        <form>
+            <textarea cols = "30", rows = "5"> 미리 글자 입력 </textarea>
+
+        </form>
+
+        <form>
+            dsdfs
+        </form>
     </body>
 
 </html>
